# REX-8

./: CMakeLists.txt  CMakePresets.json  README.md  TODO.md
Docs/: documentation.md
REX-8 Assembler/: Assembler.cpp
REX-8 CPU/: CPU.cpp
